--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "node-fetch": "^2.6.6",
     "nodemon": "^2.0.20",
     "twilio": "^3.83.3"
