--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.8.3",
     "node-fetch": "^2.6.6",
     "nodemon": "^2.0.20",
-    "twilio": "^3.83.3"
+    "twilio": "^3.83.3",
+    "validator": "^13.7.0"
   }
 }
